[gd_scene load_steps=5 format=3 uid="uid://du88185b47kcn"]

[ext_resource type="FontFile" uid="uid://0jjscadnd6x4" path="res://fonts/Xolonium-Regular.ttf" id="1_3krmv"]
[ext_resource type="Script" path="res://Hud.gd" id="1_g47wp"]

[sub_resource type="InputEventAction" id="InputEventAction_5rupr"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_fs1ms"]
events = [SubResource("InputEventAction_5rupr")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_g47wp")

[node name="P1ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -512.0
offset_right = -467.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_3krmv")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="P2ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 448.0
offset_right = 493.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_3krmv")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -79.5
offset_right = 240.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_3krmv")
theme_override_font_sizes/font_size = 64
text = "Joust!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.5
offset_top = -140.0
offset_right = 88.5
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_3krmv")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_fs1ms")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
